tests/fsharp/typecheck/sigs/neg_byref_14.bsl

neg_byref_14.fs(3,29,3,39): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.

neg_byref_14.fs(3,11,3,25): typecheck error FS0437: A type would store a byref typed value. This is not permitted by Common IL.

neg_byref_14.fs(3,11,3,25): typecheck error FS0412: A type instantiation involves a byref type. This is not permitted by the rules of Common IL.
