tests/fsharp/typecheck/sigs/neg_byref_14.fs
module Test
#nowarn "1175"
exception ByrefException of byref<int> (* trap: exception with byref type *)
